compi-version-8/text Box Mio/Parser.cs
using System;
using System.Collections;
using System.IO;
using System.Reflection;
using System.Reflection.Emit;
//using at.jku.ssw.cc.tests;
using text_Box_Mio;
//using compilador;

namespace at.jku.ssw.cc {
  public class ElemPilita
    {
        public enum ElemDePila { esEntero, esEstring };
        public int entero;
        public string estring;
        public ElemDePila elemDePila;
        //public static BrtrueENUM vsrEnum = BrtrueENUM.BEQenum;
        public ElemPilita(int entero, string estring, ElemDePila elemDePila)
             { this.entero = entero; this.estring = estring; this.elemDePila = elemDePila; }
    }

  public class PilaMia : Pila
  {
     public  PilaMia(int cantElem):base(cantElem) { }

     public void mostrarPilita()
     {
         string pilaString = "";
         for (int i = this.cantMaxDeElem - 1; i >= 0; i--)
         {
             if (i > Parser.pilita.tope)

                 pilaString = pilaString + "\n" + " ";
             else
             {
                 string elemParaMostrar;
                 if (((ElemPilita)elementos[i]).elemDePila == ElemPilita.ElemDePila.esEntero)
                     elemParaMostrar = ((ElemPilita)elementos[i]).entero.ToString();
                 else elemParaMostrar = ((ElemPilita)elementos[i]).estring;
                 pilaString = pilaString + "\n" + elemParaMostrar;

             }
         }
         Program1.form1.richTextBox2.Text = pilaString;
         if (Parser.muestraCargaDeInstrs) Parser.MessageBoxCon2PregMaqVirtual();
     }

     public void inicializa()
     {
         for (int i = this.cantMaxDeElem - 1; i >= 0; i--)
         {
             elementos[i] = new ElemPilita(0, "", ElemPilita.ElemDePila.esEntero);
         }
     }

  }

  class Parser
   {
    public static FrmContinuar mens = new FrmContinuar();
    public static FrmContinuarMaqVirtual mensMaqVirtual = new FrmContinuarMaqVirtual();
    
    public static bool muestraProducciones = true;
    public static bool muestraCargaDeInstrs = true;
    public static bool ejecuta = false;

    public static PilaMia pilita = new PilaMia(10);


    public static void MessageBoxCon2PregMaqVirtual()
    {
        mensMaqVirtual.ShowDialog();
    }

    public static void MessageBoxCon3Preg()
    {
        if (muestraProducciones) //System.Windows.Forms.MessageBox.Show("Continuar","Árbol de Derivación");
            Program1.form1.instContinuar.ShowDialog();     
    

            Program1.form1.treeView1.ExpandAll();   
       // mens.ShowDialog();
    }//Fin MessageBoxCon3Preg()


    public enum AccionInstr { nop, loadLocal, storeLocal, add, sub, mul, div, pop, 
                                    loadConst, write, writeln, branchInc, tJump, fJump, ldstr, ret }

    public class Instruccion
    {
        public AccionInstr accionInstr;
        public int nro;
        public int nroLinea;
        public string argDelWriteLine;
        public Code.BrfalseENUM indBrFalse;
        public Code.BrtrueENUM indBrTrue;
        public string instrString;


        public Instruccion(AccionInstr accionInstr, int nro, int nroLinea, string argDelWriteLine, 
                           Code.BrtrueENUM indBrTrue, Code.BrfalseENUM indBrFalse, string instrString )
        { this.accionInstr = accionInstr; this.nro = nro;
          this.nroLinea = nroLinea; this.argDelWriteLine = argDelWriteLine;
          this.indBrTrue = indBrTrue; this.indBrFalse = indBrFalse; this.instrString = instrString;
        }
    }
    public static bool yaPintada = false;
    public const int maxnroDeInstrCorriente = 200;
    public static int nroDeInstrCorriente; //nroDeInstrCorriente;
//    public static int nroInstrParaRectificarElWhile; 
    public static Instruccion[] cil; 
    static string[] namesAccionInstr = { "nop", "ldloc.", "stloc.", "add", "sub", "mul", "div", "pop",
                                         "ldc.i4 ", "write", "writeln", "br", "br_tJump" ,
                                         "br_fJuamp", "ldstr", "ret"};

    public static void inicializaCil()
    {
        cil = new Instruccion[maxnroDeInstrCorriente];
        for (int i = 0; i < maxnroDeInstrCorriente; i++)
            cil[i] = new Instruccion(AccionInstr.nop, 0, 0,"",
                                     Code.BrtrueENUM.BEQenum, Code.BrfalseENUM.BEQenum, "");
    }

    public static void muestraCil()
    {
        string todasLasInstrs = "Accion\tNro\tLinea";
        System.Windows.Forms.MessageBox.Show(maxnroDeInstrCorriente.ToString());

        for (int i = 0; i < maxnroDeInstrCorriente; i++)
        {
            todasLasInstrs = todasLasInstrs + "\n"
                                + i.ToString() + ":"
                                + namesAccionInstr[(int)cil[i].accionInstr] + "\t"
                                + cil[i].nro.ToString() + "\t"
                                + cil[i].nroLinea.ToString()
                                + cil[i].argDelWriteLine;
        }
        Program1.form1.richTextBox5.Text = todasLasInstrs;
        System.Windows.Forms.MessageBox.Show("fin");
    }

    public const int maxCantVarsLocales = 10;
    public static int cantVarLocales; 
    public static int[] locals = new int[maxCantVarsLocales];

    public static void muestraVarsLocales()
    {
        string todasLasVarsLocales;
        if (cantVarLocales == 0) todasLasVarsLocales = "No hay vars locales";
        else
        {
            todasLasVarsLocales = locals[0].ToString();
            for (int i = 1; i < cantVarLocales; i++)
            {
                todasLasVarsLocales = todasLasVarsLocales + "\n" + locals[i].ToString();
            }
            Program1.form1.richTextBox4.Text = todasLasVarsLocales;
        }
    }

    static void ParteFinal1()
    {
        Type ptType1 = Code.program.CreateType(); 
        object ptInstance1 =
                Activator.CreateInstance(ptType1, new object[0]);  //new object[0] si sin parms
        ptType1.InvokeMember("Main", BindingFlags.InvokeMethod, null, ptInstance1, new object[0]);
        Code.assembly.Save("Piripipi" + ".exe");
        //Console.WriteLine("\nTermina ret, create type, createInst, Invoke Main");
        
        if (ZZ.readKey) Console.ReadKey();
    }//Fin ParteFinal1

    static void ReadKeyMio () 
        {
                Code.il.EmitCall(OpCodes.Call, typeof(Console).GetMethod("Read", new Type[0]), null);
                Code.il.Emit(OpCodes.Conv_U2);
                Code.il.Emit(Code.POP);
        }

    public const int
        PROGRAM = 1, CONSTDECL = 2, VARDECL = 3, CLASSDECL = 4, METHODDECL = 5, FORMPARS = 6,
        TYPE = 7, STATEMENT = 8, BLOCK = 9, ACTPARS = 10, CONDITION = 11, CONDTERM = 12,
        CONDFACT = 13, EXPR = 14, TERM = 15, FACTOR = 16, DESIGNATOR = 17, RELOP = 18, 
        ADDOP = 19, MULOP = 20, IDENT=21;

	static TextWriter output;

	public static Token token;    // last recognized token
    public static Token laToken;  // lookahead token (not yet recognized)
	static int la;         // shortcut to kind attribute of lookahead token (laToken.kind)

	/* Symbol table object of currently compiled method. */
	internal static Symbol curMethod;
	
	/* Special Label to represent an undefined break destination. */
	//static readonly Label undef;
	
	/* Reads ahead one symbol. */
	static void Scan () {   
        token = laToken;
        laToken = Scanner.Next(); 
        //La 1° vez q se ejecuta, token queda con Token(1, 1), laToken con "class" (primer token del programa)
                                             
        //Console.WriteLine("token.kind: "+Token.names[token.kind]+ "\t token.str: " + token.str);
        //Console.WriteLine("laToken.kind:"+Token.names[laToken.kind]+"\t laToken.str:"+laToken.str+"\n");
        la = laToken.kind;
	}
	
	/* Verifies symbol and reads ahead. */
	static void Check (int expected) {  //expected viene de la gramatica,  la del laToken que leyó
		if (la == expected) 
            Scan();
        else
            Errors.Error("Se esperaba un: " + Token.names[expected]); 
	}

 	//////////////////////////////////////////////////////////////////////////
	/* Program = "class" ident { ConstDecl | VarDecl | ClassDecl } 
	 *           "{" { MethodDecl } "}" . */
    // First(Program)={class};  Follow(Program)={eof}

	static void Program() {
        //Program1.form1.treeView1.ExpandAll();
        System.Windows.Forms.TreeNode program = new System.Windows.Forms.TreeNode();  //Crea el nodo program

        if (Parser.muestraProducciones)
        {

            program.Text = "Program"; //Texto del nodo "program"
            Program1.form1.treeView1.Nodes.Add(program); //"cuelga" el nodo (raiz) "program" del treeView1 ya creado

            Parser.MessageBoxCon3Preg();

            Code.seleccLaProdEnLaGram(0);  //pinta de rojo    Program = 'class' ident PosDeclars '{' MethodDeclsOpc '}'.

            //Code.cargaProgDeLaGram("Program = 'class' ident PosDeclars '{' MethodDeclsOpc '}'.");

            Parser.MessageBoxCon3Preg();

            program.Nodes.Add("class");
            //Program1.form1.treeView1.Refresh();
            //Program1.form1.treeView1.Update();
            program.ExpandAll(); //Visualiza (Expande) hijo de Program

            Parser.MessageBoxCon3Preg();
        }

        //antes del Check (Token.CLASS), token = ...(1,1),  laToken = ..."class".. y la = Token.CLASS
        Check(Token.CLASS);   //class ProgrPpal
        //Se cumple que:  (la == expected) => ejecuta Scan => token = ..."class"... y laToden = ..."ProgrPpal" 


        Code.coloreaConRojo("token");
        //Code.coloreaConRojo(true);   //colorea "class" en ventana de Edicion
        //El argumento "true" => que lo que va a colorear es "el token" (en este caso: "class").
        //Si el arg es "false" => que lo que va a colorear es "el laToken" 

        
        //"Program = 'class' ident PosDeclars '{' MethodDeclsOpc '}'."
        //Ya reconoció 'class', ahora va a reconocer ident
        program.Nodes.Add("ident");
        Parser.MessageBoxCon3Preg();

        Check(Token.IDENT); // "ProgrPpal" => debo insertar el token en la tabla de símbolos
                            // es el comienzo del programa y abrir un nuevo alcance
        //Ahora token = "ProgrPpal" y laToken = "{"

        Code.coloreaConRojo("token");
        //Code.coloreaConRojo(true);  //"class" ya lo pintó, ahora pinta "ProgrPpal"  (lo que hay en token)
                                              
        Symbol prog = Tab.Insert(Symbol.Kinds.Prog, token.str, Tab.noType);//lo cuelga de universe

        Code.CreateMetadata(prog);

        Tab.OpenScope(prog); //topScore queda ahora apuntando a un nuevo Scope
                         //El Scope anterior (universo) lo accedo via topScore.outer
        //Ya analizó Class ProgrPpal

        //Declaraciones (de ctes, de Globals(aunque diga de vars) y de clases) 
        //hasta q venga una "{"

        //"Program = 'class' ident PosDeclars '{' MethodDeclsOpc '}'."
        //Ya reconoció ident, ahora va a reconocer PosDeclars
        System.Windows.Forms.TreeNode posDeclars = new System.Windows.Forms.TreeNode("PosDeclars");
        program.Nodes.Add(posDeclars);  //Cuelga un TreeNode porque PosDeclars es No Terminal
        Parser.MessageBoxCon3Preg();

        Code.seleccLaProdEnLaGram(1);  //"PosDeclars = . | Declaration PosDeclars.";
        Parser.MessageBoxCon3Preg();
        
        //bool existeDecl = false;
        
        //bool bandarita = false; // bandera se encarga de verificar si existen declaraciones globales,constantes etc.
        //"Declaration = ConstDecl | VarDecl | ClassDecl."

        while (la != Token.LBRACE && la != Token.EOF) //Si no existen declaraciones, la = Token.LBRACE
        {
            Code.coloreaConRojo("latoken");
            //Code.coloreaConRojo(false); //si existiera una declaracion, as "int i", colorea "int";  (yaPintado = true)
            //El argumento "false" => que no debe pintar el "token" (que en este caso seria "ProgrPpal"), sino el laToken (que es "int")

            //en este caso, debe "mirar hacia adelante" (laToken) 
            //para determinar la opcion de la produccion "PosDeclars = . | Declaration PosDeclars."    
            //Si laToken es "{" => la opcion es "PosDeclars = .", otherwise: "PosDeclars = Declaration PosDeclars."

            //Code.cargaProgDeLaGram("PosDeclars = Declaration PosDeclars.");
            Code.seleccLaProdEnLaGram(2);

            //Code.cargaProgDeLaGram("Declaration = ConstDecl | VarDecl | ClassDecl.");
            System.Windows.Forms.TreeNode hijodeclar = new System.Windows.Forms.TreeNode("Declaration = ConstDecl | VarDecl | ClassDecl.");
            posDeclars.Nodes.Add(hijodeclar); 
            
            //existeDecl = true; 
            
            switch (la)
            {
                case Token.CONST:
                    ConstDecl(hijodeclar);
                    break;
                case Token.IDENT:  //Type ident..
                    //tipoSimbolo = Symbol.Kinds.Global;//debe ser para ident...
                   
                    Code.cargaProgDeLaGram("Declaration = VarDecl.");
                    System.Windows.Forms.TreeNode hijo1 = new System.Windows.Forms.TreeNode("Declaration = VarDecl.");
                    hijodeclar.Nodes.Add(hijo1);
                    Code.seleccLaProdEnLaGram(6);
                    Code.cargaProgDeLaGram("VarDecl = Type  ident IdentifiersOpc ';'.");
                    Code.seleccLaProdEnLaGram(12);
                    
                    Code.cargaProgDeLaGram("Type = ident LbrackOpc."); //ya pintó el ident (por ej "int en int ii);
                    VardDecl(Symbol.Kinds.Global,hijo1); //En program  //Table val;

                    break;
                case Token.CLASS:
                    ClassDecl();/*No se encuentra la gramatica para implementar declaracione de clases" */
                    break;
                default: 
                    token = laToken;
                    Errors.Error("Se esperaba Const, Tipo, Class");
                    break;
            }
            Code.seleccLaProdEnLaGram(1);
            Code.cargaProgDeLaGram("selccionó la 1 PosDeclars = . | Declaration PosDeclars.");
        }

        Code.coloreaConRojo("latoken");
        //Code.coloreaConRojo(false); //"{"
        //El argumento "false" => que no debe pintar el "token" (que en este caso seria "ProgrPpal"), sino el laToken (que es "{")

        //en este caso, debe "mirar hacia adelante" (laToken) 
        //para determinar la opcion de la produccion "PosDeclars = . | Declaration PosDeclars."    
        //Si laToken es "{" => la opcion es "PosDeclars = .", otherwise: "PosDeclars = Declaration PosDeclars."

        if (la!=Token.EOF)
        {
            //Code.cargaProgDeLaGram("PosDeclars = .");////////////////////////
            posDeclars.Nodes.Add(".");
            posDeclars.ExpandAll(); //Visualiza (Expande) posDeclars
            Parser.MessageBoxCon3Preg(); 
        }
        if (ZZ.parser)
        {
            Console.WriteLine("Terminó con todas las declaraciones");
            Console.WriteLine("//el topScope queda apuntando a --> const size, class Table (con int[] pos y int[] neg), Table val");
        };
        if (ZZ.parser) { Console.WriteLine("empieza {"); if (ZZ.readKey) Console.ReadKey(); };

        Check(Token.LBRACE);
        //No es necesario pintar ya que el Token venia pintado desde antes
        //Code.coloreaConRojo("token");
        //Code.coloreaConRojo(true);  //ya lo pintó
        /////////
        program.Nodes.Add("'{'");
        ////////
            Parser.MessageBoxCon3Preg();

            System.Windows.Forms.TreeNode methodDeclsOpc = new System.Windows.Forms.TreeNode("MethodDeclsOpc");
            program.Nodes.Add(methodDeclsOpc);
            //////////////////
            Parser.MessageBoxCon3Preg();
            Code.seleccLaProdEnLaGram(3);//3.MethodDeclsOpc = . | MethodDecl Meth
            Parser.MessageBoxCon3Preg(); 

        // si "la" pertenece a First(MethodDec) => sólo deben haber metodos
        while ((la == Token.IDENT || la == Token.VOID) && la != Token.EOF)
        //////////////////////////////////////////////////////////////////////////////////////////////////
        {
            ///////////////////


            MethodDecl(methodDeclsOpc);  //void Main() int x,i; {val = new Table;....}
                     //hijo1 = "MethodDeclsOpc"
        }
        //////////////////////////////////////////////////////////////////////////////////////////////////

        Check(Token.RBRACE);
        //Code.cargaProgDeLaGram("termina }"); //Ya estaba la produccion 
        Code.coloreaConRojo("token");
        //Code.coloreaConRojo(true);
        //////
        program.Nodes.Add("}");
        /////

        //Inicio Modificacion - Grupo 1 - 10/9/15
        //No es necesario mostrar este richtextbox y el boton hasta no ejecutar la maquina virtual
        //Program1.form1.richTextBox2.Visible = true;// new Program1.form1.richTextBox(); // 2.Visible; //   .Visible();
        //Program1.form1.button3.Visible = true;
        //Fin Modificacion - Grupo 1 - 10/9/15
        if (ZZ.parser)
        {
            Console.WriteLine("antes de prog.locals = Tab.topScope.locals; Tab.CloseScope()");
            if (ZZ.readKey) Console.ReadKey();
            //Tab.mostrarTab();
        };

        prog.locals = Tab.topScope.locals;

        if (ZZ.parser)
        {
            Console.WriteLine("mostrarSymbol");
            prog.mostrarSymbol("");
            if (ZZ.readKey) Console.ReadKey();
        };
        
        Tab.CloseScope();
        Tab.mostrarTab();

        bool Depuracion = false;
        if (!Depuracion) ParteFinal1();
        
        if (ZZ.parser)
        {
            Console.WriteLine("despues de prog.locals = Tab.topScope.locals; Tab.CloseScope()");
            if (ZZ.readKey) Console.ReadKey();
            Tab.mostrarTab();
        };
       
        


    }//Fin Program

	/* ConstDecl = "const" Type ident "=" ( number | charConst ) ";" . */
    //First(ConstDecl)={const}; Follow(ConstDecl)={"{"}
    static void ConstDecl(System.Windows.Forms.TreeNode padre)  
    {   //laToken=const  
        ////
        System.Windows.Forms.TreeNode hijo1 = new System.Windows.Forms.TreeNode("Declaration = ConstDecl.");
        padre.Nodes.Add(hijo1);
        //////////
        System.Windows.Forms.TreeNode hijo2 = new System.Windows.Forms.TreeNode("ConstDecl = 'const' Type ident '=' NumberOrCharConst");
        hijo1.Nodes.Add(hijo2);
        Check(Token.CONST);  //const int i = 3;
        Code.coloreaConRojo("token");
        //Code.coloreaConRojo(true);
        /////
        hijo2.Nodes.Add("'const'");
        ////
        Code.cargaProgDeLaGram("Declarations = Declaration Declarations.");
        Code.cargaProgDeLaGram("Declaration = ConstDecl.");

        //token=const  laToken=int
        Struct type; 
        //= new Struct(Struct.Kinds.None); se podria haber hecho de 2 modos mas: ref y x valor
        // en ambos casos necesito Struct type = new...; 
        Type(out type); //En ConstDecl()  /
        /////
        hijo2.Nodes.Add("Type = "+type.kind.ToString());
        ////
        //Code.coloreaConRojo(true);
        if (type != Tab.intType && type != Tab.charType)  
        {
            Errors.Error("el tipo de una def de const sólo puede ser int o char");
        }          
        Check(Token.IDENT); //i
        ////
        hijo2.Nodes.Add("ident");
        ////
        Code.coloreaConRojo("token");
        //Code.coloreaConRojo(true); 
        if (muestraProducciones) MessageBoxCon3Preg(); ;
        //token quedó con i, laToken con =
        // debo agregar a la tabla de símbolos un nuevo símbolo  
        Symbol constante = 
            Tab.Insert(Symbol.Kinds.Const, token.str, type);
        if (ZZ.parser) Console.WriteLine("termina de insertar constante con type = " + type.kind);

        Check(Token.ASSIGN);  //const
        ////
        hijo2.Nodes.Add("'='");
        Code.coloreaConRojo("token");
        //Code.coloreaConRojo(true); 
        if (muestraProducciones) MessageBoxCon3Preg();
        //token quedó con =, laToken con 10
        ////
        System.Windows.Forms.TreeNode hijo3 = new System.Windows.Forms.TreeNode("NumberOrCharConst");
        hijo2.Nodes.Add(hijo3);
        switch (la)
        {
            case Token.NUMBER:
                if (type != Tab.intType) Errors.Error("type debe ser int");
                Check(Token.NUMBER);
                Code.coloreaConRojo("token");    
                //Code.coloreaConRojo(true);
                ////
                hijo3.Nodes.Add("number");
                ////
                if (muestraProducciones) MessageBoxCon3Preg();
                constante.val = token.val;
                break;
            case Token.CHARCONST:
                if (type != Tab.charType) Errors.Error("type debe ser char");
                Check(Token.CHARCONST);
                ////
                hijo3.Nodes.Add("charConst");
                ////
                Code.coloreaConRojo("token");
                //Code.coloreaConRojo(true); if (muestraProducciones) MessageBoxCon3Preg();
                constante.val = token.val; //Seguro?
                break;
            default: Errors.Error("def de const erronea");
                break;
        };
        if (ZZ.parser) Console.WriteLine("Ahora actualizó el valor");
        if (ZZ.parser) Tab.mostrarTab();
        //Tab.mostrarTab();
        //Program1.form1.richTextBox10.Text = Tab.tabSimbString;

        Check(Token.SEMICOLON);
        Code.coloreaConRojo("token");
        //Code.coloreaConRojo(true);
        ////
        hijo2.Nodes.Add("';'");
        ////
    }
        

	//VarDecl = Type ident { "," ident } ";" . 
    // First(VarDecl)={ident}; Follow(VarDecl)={"{"}

    //  too puede ser un field, ademas de una ., o un Global
    static void VardDecl(Symbol.Kinds kind, System.Windows.Forms.TreeNode padre)
    {  //visto  //si es "int[] pos" y viene de "Class Tabla {", kind es "Field"
        // si es Tabla val y viene de "class P {", kind es "Global"
        Struct type;// = new Struct(Struct.Kinds.None); //int i;
        Code.seleccLaProdEnLaGram(6);
        if (muestraProducciones) MessageBoxCon3Preg();

        Code.cargaProgDeLaGram("VarDecl = Type  ident IdentifiersOpc ';'");
        /////

        //Cambiar desde aca aaaaaaaaaaa

        System.Windows.Forms.TreeNode hijo1 = new System.Windows.Forms.TreeNode("VarDecl = Type  ident IdentifiersOpc ';'");
        padre.Nodes.Add(hijo1);
        /////
        Type(out type);  //En VardDecl
                //int[] en el caso del "int[] pos",... int, Table, Persona, int[], etc  
                //Table en el caso de Table val;
                //int en int x;
        ////
        hijo1.Nodes.Add("Type = "+type.kind.ToString());
        ////
        Check(Token.IDENT); // "pos", en int pos,   .....int,....  x, i, etc
        ////
        hijo1.Nodes.Add("ident");
        ////
        System.Windows.Forms.TreeNode hijo2 = new System.Windows.Forms.TreeNode("IdentifiersOpc");
        hijo1.Nodes.Add(hijo2);
        ////
        // debo insertar el token en la tabla de símbolos
        Code.coloreaConRojo("token");
        //Code.coloreaConRojo(true);  //Ya viene pintado
        cantVarLocales++; //provisorio: esto deberia hacerlo solo para el caso de var locales (no para var globales)
        Symbol vble = Tab.Insert(kind, token.str, type);   
        //vble no, poner simbolo (para pos, en int[] pos)
        //pues en este caso  es campo, y devuelve el Symbol p/pos,  type es int[]
        //puede ser val, en Tabla val, y type es Table //y devuelve el Symbol p/val
        Code.CreateMetadata(vble); //Para el campo pos (en int[] pos)Global, Field o .....  
                                   //o Para la vbe Global val
                                   //o para x en int x;

        Code.seleccLaProdEnLaGram(7);
        //Code.cargaProgDeLaGram("IdentifiersOpc = . | ',' ident IdentifiersOpc.");
        while (la == Token.COMMA && la != Token.EOF) 
        {
            Scan(); // Check(Token.COMMA);
            Code.coloreaConRojo("token");
            //Code.coloreaConRojo(true);
            Code.cargaProgDeLaGram("IdentifiersOpc = ',' ident  IdentifiersOpc.");//deberia extender el arbol
            ////
            hijo2.Nodes.Add("','");
            ////
            //if (muestraProducciones) MessageBoxCon3Preg();

            Check(Token.IDENT); //otro identif
            hijo2.Nodes.Add("ident");
            Code.coloreaConRojo("token");
            //Code.coloreaConRojo(true);
            cantVarLocales++; //provisorio: esto deberia hacerlo solo para el caso de var locales (no para var globales)

            //if (muestraProducciones) MessageBoxCon3Preg();

            vble = Tab.Insert(kind, token.str, type);
            Code.CreateMetadata(vble); //Para i, en int x,i
            Code.seleccLaProdEnLaGram(7);
            //Code.cargaProgDeLaGram("IdentifiersOpc = . | ',' ident IdentifiersOpc.....al semicolon");
        }
        Check(Token.SEMICOLON);
        hijo1.Nodes.Add("';'");
        Code.coloreaConRojo("token");
        //Code.coloreaConRojo(true);

        Code.cargaProgDeLaGram("IdentifiersOpc = .");
    }
    
    /* ClassDecl = "class" ident "{" { VarDecl } "}" . */
    // First(ClassDecl)={class}; Follow(ClassDecl)={"{"}
    static void ClassDecl()  
    {//class Table {int i; int j; metodo1...  metodo2...}
        Check(Token.CLASS); //class Table {int[] pos;int[] pos;},.. class C1 {int i; void P1(){}; char ch; int P2{}; int[] arr;  }
        Check(Token.IDENT); // "Table", laToken queda con "{"
        String nombreDeLaClase = token.str;//Table
        Struct StructParaLaClase = new Struct(Struct.Kinds.Class);
        //crear un Struct para la clase (con kind=Class)

        Check(Token.LBRACE); //"{"... laToken queda con "Table",...const    C1,  o  Table (en class Table)   
        Symbol nodoClase = Tab.Insert(Symbol.Kinds.Type, nombreDeLaClase, //crea symbol p/la clase Table
                                      StructParaLaClase);  //Con type=class

        //nodoClase.type =  StructParaLaClase; //no hace falta, ya lo hizo en el insert

        Code.CreateMetadata(nodoClase);//crea clase Din p/Table (por ej.), 
                                       //queda apuntada por nodoClase.type.sysType
        
        // todas las variables que declaren son tipo FIELD, excepto las clases (anidadas)
        //class C1 { => int i,j; char ch; Pers p=new Pers(); int P2{}; int[] arr;  }
        //class Table { => int[] pos; int[] neg}
        //por ahora, no permitimos void P1 {};

        Tab.OpenScope(nodoClase);
        while (la != Token.RBRACE && la != Token.EOF)  //itera p/c/campo (pos)
        {
            switch (la)
            {
                case Token.CONST:
                    ConstDecl(null);  //const int size = 10
                    break;
                case Token.IDENT:  //Type ident.., por ej: int i, int[] pos, etc...
                    //tipoSimbolo = Symbol.Kinds.Field...
                    //deberia ser declaracion de campo (pues cuelga de una clase, no de un metodo)
                    VardDecl(Symbol.Kinds.Field,null); // P/distinguir campos de clases
                         //Lo que va a declarar (pos), va a ser un Symbol con kind "field"
                                                  //int[] pos;
                    break;
                case Token.CLASS: //por ahora no debiera permitir clases anidadas ???
                    ClassDecl();
                    break;
                
                default:
                    Errors.Error("Se esperaba Const, tipo, class");
                    break;
            }
        }
        
        //crear un Struct para la clase (con kind=Class)
        //Struct StructParaLaClase = new Struct(Struct.Kinds.Class);

        //hacer StructParaLaClase.fields = topScope.locals
        StructParaLaClase.fields = Tab.topScope.locals;
        //nodoClase.type =  StructParaLaClase;

        Tab.CloseScope();  //con lo cual recuperamos topSScope 

        Check(Token.RBRACE);   //laToken queda con Table (en Table ...)

        //class C1 { => int i,j; char ch; Pers p=new Pers(); int P2{}; int[] arr;  }
        // int i,j; char ch; Pers p..etc, quedó apuntado por topScope.locals
    }


	/* MethodDecl = ( Type | "void" ) ident "(" [ FormPars ] ")"
	 *              { VarDecl } Block . 
	 */
    // First(MethodDecl)={ident, void}; Follow(MethodDecl)={"}"}
    static void MethodDecl(System.Windows.Forms.TreeNode padre) //void Main() int x,i; {val = new Table;....} 
    {
        /////// padre = "MethodDeclsOpc"
        System.Windows.Forms.TreeNode hijo1 = new System.Windows.Forms.TreeNode("MethodDecl"); //luego hay que sacarlo y modificar la rama del ident
        //padre.Nodes.Add(hijo1);
        ////////
        //MessageBoxCon3Preg();
        System.Windows.Forms.TreeNode methodDecl = new System.Windows.Forms.TreeNode("MethodDecl"); //cuelga ESTE NODO DESPUES DE pintar el void


        Struct type = new Struct(Struct.Kinds.None); //Pone por defecto void
        if (la == Token.VOID || la == Token.IDENT)
        {
            if (la == Token.VOID)
            {
                
                Check(Token.VOID); //token = void laToken = Main
                Code.coloreaConRojo("token");
                //Code.coloreaConRojo(true);  //pinta void //incluye if (muestraProducciones) MessageBoxCon3Preg();
                //Code.cargaProgDeLaGram("MethodDeclsOpc = MethodDecl MethodDeclsOpc.");

                //Una vez que encuentra "void", infiere que debe usar la opcion: methodDecl.... etc 
                padre.Nodes.Add(methodDecl);
                padre.Expand();
                ////////
                if (muestraProducciones) MessageBoxCon3Preg();


                Code.seleccLaProdEnLaGram(8);  //MethodDecl = TypeOrVoid  ident "(" PossFormPars ")" Block.
                if (muestraProducciones) MessageBoxCon3Preg();

                System.Windows.Forms.TreeNode typeOrVoid = new System.Windows.Forms.TreeNode("TypeOrVoid"); //ya ha pintado el void
                methodDecl.Nodes.Add(typeOrVoid);
                methodDecl.Expand();
                if (muestraProducciones) MessageBoxCon3Preg();
                
                //Code.cargaProgDeLaGram("MethodDecl = TypeOrVoid ident '(' Pars ')' PosDeclars Block.");

                Code.seleccLaProdEnLaGram(9);  // 9.TypeOrVoid  = Type | "void“.
                if (muestraProducciones) MessageBoxCon3Preg();

                //como ya ha verificado "void", 
                
                typeOrVoid.Nodes.Add("'void'");
                typeOrVoid.Expand();
                if (muestraProducciones) MessageBoxCon3Preg();

                type = Tab.noType; //  para void
            }
            else
                if (la == Token.IDENT)
                {
                    Type(out type);  //  token = UnTipo laToken = Main
                    Code.cargaProgDeLaGram("TypeOrVoid  = Type.");
                    Code.coloreaConRojo("token");
                    //Code.coloreaConRojo(true);
                    ///////////
                    //hay que cambiar hijo1 por methodDecl, e hijo2 por... 
                    System.Windows.Forms.TreeNode hijo2 = new System.Windows.Forms.TreeNode("TypeOrVoid = Type");
                    hijo1.Nodes.Add(hijo2);
                    hijo2.Nodes.Add("Type= "+type.kind.ToString());
                    //////////
                }
            ///////
            methodDecl.Nodes.Add("ident");
            if (muestraProducciones) MessageBoxCon3Preg();

            Check(Token.IDENT);  //Main por ej.  //token = Main, laToken = "("
            Code.coloreaConRojo("token");
            //Code.coloreaConRojo(true);
            
            //hijo1.Nodes.Add("ident");
            //////
            curMethod = Tab.Insert(Symbol.Kinds.Meth, token.str, type);//inserta void Main 
            // que pasa si hubieran parametros?
            Tab.OpenScope(curMethod);
            // tengo que insertar un método en la tabla de símbolo
            // todos los parámetros son locales 
            //tipoSimbolo = Symbol.Kinds.Local;
            ////
            methodDecl.Nodes.Add("'('");
            if (muestraProducciones) MessageBoxCon3Preg();
            ////

            
            Check(Token.LPAR);  //Si Main() => no tiene FormPars
            Code.coloreaConRojo("token");
            //Code.coloreaConRojo(true);


            /////////
            System.Windows.Forms.TreeNode pars = new System.Windows.Forms.TreeNode("Pars");
            methodDecl.Nodes.Add(pars);
            if (muestraProducciones) MessageBoxCon3Preg();

            Code.seleccLaProdEnLaGram(10);  //10.Pars = . | FormPar CommaFormParsOpc. 
            if (muestraProducciones) MessageBoxCon3Preg();
